--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,15 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -24,25 +33,16 @@ jobs:
       run: npm ci
       
     - name: Build and Export
-      run: npm run build
-      env:
-        NEXT_PUBLIC_FULL_NAME: ${{ secrets.NEXT_PUBLIC_FULL_NAME }}
-        NEXT_PUBLIC_EMAIL: ${{ secrets.NEXT_PUBLIC_EMAIL }}
-        NEXT_PUBLIC_PHONE: ${{ secrets.NEXT_PUBLIC_PHONE }}
-        NEXT_PUBLIC_LOCATION: ${{ secrets.NEXT_PUBLIC_LOCATION }}
-        NEXT_PUBLIC_TIMEZONE: ${{ secrets.NEXT_PUBLIC_TIMEZONE }}
-        NEXT_PUBLIC_GITHUB_URL: ${{ secrets.NEXT_PUBLIC_GITHUB_URL }}
-        NEXT_PUBLIC_LINKEDIN_URL: ${{ secrets.NEXT_PUBLIC_LINKEDIN_URL }}
-        NEXT_PUBLIC_TWITTER_URL: ${{ secrets.NEXT_PUBLIC_TWITTER_URL }}
-        NEXT_PUBLIC_PORTFOLIO_URL: ${{ secrets.NEXT_PUBLIC_PORTFOLIO_URL }}
-        NEXT_PUBLIC_RESUME_PATH: ${{ secrets.NEXT_PUBLIC_RESUME_PATH }}
-        NEXT_PUBLIC_RESUME_FILENAME: ${{ secrets.NEXT_PUBLIC_RESUME_FILENAME }}
-        NEXT_PUBLIC_CONTACT_EMAIL_LINK: ${{ secrets.NEXT_PUBLIC_CONTACT_EMAIL_LINK }}
-        NEXT_PUBLIC_CONTACT_PHONE: ${{ secrets.NEXT_PUBLIC_CONTACT_PHONE }}
+      run: |
+        # Copy .env.local for build (remove this after setting up GitHub secrets)
+        cp .env.local .env.production.local 2>/dev/null || echo "No .env.local found, using GitHub secrets"
+        npm run build
+        
+    - name: Upload Pages artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./out
       
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./out
+      uses: actions/deploy-pages@v4
+      id: deployment
